Fix on img stretch on safari mobile.

--- a/src/ProjectPages/Components/Section/Section.scss
+++ b/src/ProjectPages/Components/Section/Section.scss
@@ -75,6 +75,7 @@ $bodyPadding: 70px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: flex-start;
     
     img {
       width: 30vw;
